# tonic-web-wasm-client

./: .gitignore  Cargo.toml  Justfile  LICENSE_MIT  README.md  README.tpl  rust-toolchain.toml
.github/workflows/: build.yml  gzip.yml  test.yml
src/: abort_guard.rs  body_stream.rs  call.rs  client.rs  content_type.rs  error.rs  fetch.rs  grpc_response.rs  lib.rs  response_body.rs
src/options/: cache.rs  credentials.rs  mod.rs  mode.rs  redirect.rs  referrer_policy.rs
src/wasip2/: call.rs  mod.rs  options.rs
test-suite/client/: Cargo.toml
test-suite/client/src/: lib.rs
test-suite/client/tests/: web.rs
test-suite/gzip/client/: Cargo.toml  build.rs
test-suite/gzip/client/src/: lib.rs
test-suite/gzip/client/tests/: web.rs
test-suite/gzip/proto/: echo.proto
test-suite/gzip/server/: Cargo.toml
test-suite/gzip/server/src/: main.rs
test-suite/proto/: echo.proto
test-suite/server/: Cargo.toml
test-suite/server/certs/: cert.pem  key.pem
test-suite/server/src/: main.rs
test-suite/simple/client/: Cargo.toml  build.rs
test-suite/simple/client/.cargo/: config.toml
test-suite/simple/client/tests/: web.rs
test-suite/simple/proto/: echo.proto
test-suite/simple/server/: Cargo.toml  build.rs
test-suite/simple/server/src/: main.rs
tests/: web.rs
