[package]
name = "tonic-web-wasm-client"
version = "0.6.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "grpc-web implementation for use by tonic clients in browsers via webassembly"
homepage = "https://github.com/devashishdxt/tonic-web-wasm-client"
repository = "https://github.com/devashishdxt/tonic-web-wasm-client"
readme = "README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "grpc-web", "tonic", "wasm"]
edition = "2021"

[dependencies]
base64 = "0.22"
byteorder = "1"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
js-sys = "0.3"
pin-project = "1"
thiserror = "1"
tonic = { version = "0.12", default-features = false }
tower-service = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "ReadableStream",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ServiceWorkerGlobalScope",
] }
