[package]
name = "tonic-web-wasm-client"
version = "0.7.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "grpc-web implementation for use by tonic clients in browsers via webassembly"
homepage = "https://github.com/devashishdxt/tonic-web-wasm-client"
repository = "https://github.com/devashishdxt/tonic-web-wasm-client"
readme = "README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "grpc-web", "tonic", "wasm"]
edition = "2021"
rust-version = "1.86"

[dependencies]
base64 = "0.22"
byteorder = "1"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
pin-project = "1"
thiserror = "2"
tonic = { version = "0.14", default-features = false }
tower-service = "0.3"

# Browser-specific dependencies
[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"
web-sys = { version = "0.3", features = [
    "AbortSignal",
    "Headers",
    "ReadableStream",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ServiceWorkerGlobalScope",
] }

[target.wasm32-wasip2.dependencies]
wstd = "0.5"
