[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
tonic = { version = "0.7.2", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = { version = "0.1.3", path = "../.." }

[build-dependencies]
tonic-build = { version = "0.7.2", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
