[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.24"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.8.1", features = ["tls"] }
tonic-web = "0.4.0"

[build-dependencies]
tonic-build = "0.8.0"
