[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = { version = "0.9.2", default-features = false, features = [
    "prost",
    "codegen",
    "gzip",
] }

[build-dependencies]
tonic-build = { version = "0.9.2", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
tonic-web-wasm-client = { path = "../../.." }
wasm-bindgen-test = "0.3.34"
