[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14"
tonic = { version = "0.14", default-features = false, features = ["codegen", "gzip"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = { version = "0.14", default-features = false }

[dev-dependencies]
tonic-web-wasm-client = { path = "../../.." }
wasm-bindgen-test = "0.3"
