[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
http = "0.2.8"
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["gzip"] }
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", default-features = false, features = [
    "cors",
] }

[build-dependencies]
tonic-build = "0.8.4"
