[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.28"
http = "0.2.9"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["gzip"] }
tonic-web = "0.9.2"
tower-http = { version = "0.4.0", default-features = false, features = [
    "cors",
] }

[build-dependencies]
tonic-build = "0.9.2"
