[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = { version = "0.11.0", default-features = false, features = [
    "prost",
    "codegen",
] }

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
tonic-web-wasm-client = { path = "../../.." }
wasm-bindgen-test = "0.3.41"
