[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.30"
http = "0.2.11"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-web = "0.11.0"
tower-http = { version = "0.4.4", default-features = false, features = [
    "cors",
] }

[build-dependencies]
tonic-build = "0.11.0"
