[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
http = "1"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
tonic-web = "0.12"
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

[build-dependencies]
tonic-build = "0.12"
