[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
http = "1"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

[build-dependencies]
tonic-prost-build = { version = "0.14" }
